; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_ftp.c_ftp_RecvAnswer.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_ftp.c_ftp_RecvAnswer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i8**, void (i8*, i8*)*, i8*)* @ftp_RecvAnswer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ftp_RecvAnswer(i32* %0, i32* %1, i32* noalias %2, i8** noalias %3, void (i8*, i8*)* %4, i8* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca void (i8*, i8*)*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i8** %3, i8*** %10, align 8
  store void (i8*, i8*)* %4, void (i8*, i8*)** %11, align 8
  store i8* %5, i8** %12, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load void (i8*, i8*)*, void (i8*, i8*)** %11, align 8
  %18 = load i8*, i8** %12, align 8
  %19 = call i32 @ftp_RecvReply(i32* %15, i32* %16, i8** %13, void (i8*, i8*)* %17, i8* %18)
  store i32 %19, i32* %14, align 4
  %20 = load i32, i32* %14, align 4
  %21 = sdiv i32 %20, 100
  %22 = icmp eq i32 %21, 1
  br i1 %22, label %23, label %31

23:                                               ; preds = %6
  %24 = load i8*, i8** %13, align 8
  %25 = call i32 @free(i8* %24)
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load void (i8*, i8*)*, void (i8*, i8*)** %11, align 8
  %29 = load i8*, i8** %12, align 8
  %30 = call i32 @ftp_RecvReply(i32* %26, i32* %27, i8** %13, void (i8*, i8*)* %28, i8* %29)
  store i32 %30, i32* %14, align 4
  br label %31

31:                                               ; preds = %23, %6
  %32 = load i32, i32* %14, align 4
  %33 = icmp sge i32 %32, 0
  br i1 %33, label %34, label %52

34:                                               ; preds = %31
  %35 = load i32*, i32** %9, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %40

37:                                               ; preds = %34
  %38 = load i32, i32* %14, align 4
  %39 = load i32*, i32** %9, align 8
  store i32 %38, i32* %39, align 4
  br label %40

40:                                               ; preds = %37, %34
  %41 = load i8**, i8*** %10, align 8
  %42 = icmp ne i8** %41, null
  br i1 %42, label %43, label %46

43:                                               ; preds = %40
  %44 = load i8*, i8** %13, align 8
  %45 = load i8**, i8*** %10, align 8
  store i8* %44, i8** %45, align 8
  br label %49

46:                                               ; preds = %40
  %47 = load i8*, i8** %13, align 8
  %48 = call i32 @free(i8* %47)
  br label %49

49:                                               ; preds = %46, %43
  %50 = load i32, i32* %14, align 4
  %51 = sdiv i32 %50, 100
  store i32 %51, i32* %14, align 4
  br label %63

52:                                               ; preds = %31
  %53 = load i32*, i32** %9, align 8
  %54 = icmp ne i32* %53, null
  br i1 %54, label %55, label %57

55:                                               ; preds = %52
  %56 = load i32*, i32** %9, align 8
  store i32 500, i32* %56, align 4
  br label %57

57:                                               ; preds = %55, %52
  %58 = load i8**, i8*** %10, align 8
  %59 = icmp ne i8** %58, null
  br i1 %59, label %60, label %62

60:                                               ; preds = %57
  %61 = load i8**, i8*** %10, align 8
  store i8* null, i8** %61, align 8
  br label %62

62:                                               ; preds = %60, %57
  br label %63

63:                                               ; preds = %62, %49
  %64 = load i32, i32* %14, align 4
  ret i32 %64
}

declare dso_local i32 @ftp_RecvReply(i32*, i32*, i8**, void (i8*, i8*)*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
